--- a/.github/workflows/django.yml
+++ b/.github/workflows/django.yml
@@ -2,29 +2,34 @@ name: Django CI
 
 on:
   push:
-    branches: [ "main" ]
+    branches: 
+      - "main"  # Trigger on push to 'main' branch
   pull_request:
-    branches: [ "main" ]
+    branches:
+      - "main"  # Trigger on PRs to 'main' branch
 
 jobs:
   build:
-
     runs-on: ubuntu-latest
+
     strategy:
-      max-parallel: 4
+      max-parallel: 4  # Run up to 4 jobs in parallel (helpful for matrix)
       matrix:
-        python-version: [3.7, 3.8, 3.9]
+        python-version: [3.8, 3.9]  # Consider removing Python 3.7 if you want to stay up to date
 
     steps:
-    - uses: actions/checkout@v4
-    - name: Set up Python ${{ matrix.python-version }}
-      uses: actions/setup-python@v3
-      with:
-        python-version: ${{ matrix.python-version }}
-    - name: Install Dependencies
-      run: |
-        python -m pip install --upgrade pip
-        pip install -r requirements.txt
-    - name: Run Tests
-      run: |
-        python manage.py test
+      - uses: actions/checkout@v2  # Use stable version of checkout action
+
+      - name: Set up Python ${{ matrix.python-version }}
+        uses: actions/setup-python@v2  # Setup python using v2 (stable)
+        with:
+          python-version: ${{ matrix.python-version }}
+
+      - name: Install Dependencies
+        run: |
+          python -m pip install --upgrade pip
+          pip install -r requirements.txt  # Install Django dependencies
+
+      - name: Run Django Tests
+        run: |
+          python manage.py test  # Run tests with Django
