--- a/.github/workflows/django.yml
+++ b/.github/workflows/django.yml
@@ -3,33 +3,45 @@ name: Django CI
 on:
   push:
     branches: 
-      - "main"  # Trigger on push to 'main' branch
+      - "main"
   pull_request:
-    branches:
-      - "main"  # Trigger on PRs to 'main' branch
+    branches: 
+      - "main"
 
 jobs:
   build:
     runs-on: ubuntu-latest
 
     strategy:
-      max-parallel: 4  # Run up to 4 jobs in parallel (helpful for matrix)
       matrix:
-        python-version: [3.8, 3.9]  # Consider removing Python 3.7 if you want to stay up to date
+        python-version: [3.8, 3.9]  # Avoid Python 3.7 if not needed
 
     steps:
-      - uses: actions/checkout@v2  # Use stable version of checkout action
+      # Clean up git configurations to avoid proxy issues
+      - name: Clean Git Configurations
+        run: |
+          git config --global --unset-all http.proxy
+          git config --global --unset-all https.proxy
 
+      - uses: actions/checkout@v2  # Use stable version of checkout
       - name: Set up Python ${{ matrix.python-version }}
-        uses: actions/setup-python@v2  # Setup python using v2 (stable)
+        uses: actions/setup-python@v2  # Use stable version for Python setup
         with:
           python-version: ${{ matrix.python-version }}
+      
+      - name: Cache pip dependencies
+        uses: actions/cache@v2
+        with:
+          path: ~/.cache/pip
+          key: ${{ runner.os }}-pip-${{ hashFiles('**/requirements.txt') }}
+          restore-keys: |
+            ${{ runner.os }}-pip-
 
       - name: Install Dependencies
         run: |
           python -m pip install --upgrade pip
-          pip install -r requirements.txt  # Install Django dependencies
+          pip install -r requirements.txt
 
       - name: Run Django Tests
         run: |
-          python manage.py test  # Run tests with Django
+          python manage.py test
